--- a/pickbazar-react/api/rest/src/db/pickbazar/settings.json
+++ b/pickbazar-react/api/rest/src/db/pickbazar/settings.json
@@ -20,7 +20,7 @@
     "useOtp": false,
     "currency": "USD",
     "taxClass": 1,
-    "siteTitle": "Pickbazar",
+    "siteTitle": "AFDIMA",
     "deliveryTime": [
       {
         "title": "Express Delivery",
